# RoboFEI-HT_2019

./: .gitignore  .travis.yml  CMakeLists.txt  Commit.sh  Dummy_version.py  README.md  Rectangular.py  World.py  ball.py  collisions.py  commit.sh  control.py  helpmenu.py  init.py  install_Models_TensorFlow.sh  main_simulator.py  robot.py  screen.py  setup.sh  simulation.py  start.sh  start_simulator.sh  start_telemetry.sh  startupRobot.sh  vision.py  world.py
AI/: CMakeLists.txt  runvision.sh  runvisualmemory.sh  setup.sh  time (copy).txt  time.txt
AI/Blackboard/: CMakeLists.txt
AI/Blackboard/include/: blackboard.h
AI/Blackboard/src/: SharedMemory.py  blackboard.cpp
AI/Control/: CMakeLists.txt  README.md
AI/Control/Data/: config(sem bateria).ini  config.ini  config.ini~  configLARC.ini  config_original.ini
AI/Control/Framework/include/: CM730.h  DARwIn.h  MotionManager.h
AI/Control/Framework/src/motion/: MotionManager.cpp  MotionManager.cpp.corrupt
AI/Control/Framework/src/motion/modules/: Action.cpp  Head.cpp  Walking.cpp  Walking.cpp~
AI/Control/GUIcontrol/: SharedMemory.py  controlRobot.py  openglpy.py
AI/Control/Linux/ServoTool-master/src/: ServoTool.py.conf
AI/Control/Linux/device/: renamePort_forcado.py
AI/Control/Linux/include/: LinuxDARwIn.h
AI/Control/Linux/project/action_editor/: action_editor  cmd_process.cpp  main.cpp
AI/Control/Linux/project/control/: ActionMove.cpp  ActionMove.cpp~  ActionMove.hpp  GaitMove.cpp  GaitMove.hpp  kbhit.cpp  main.cpp  main.cpp~
AI/IMU/serial/: CMakeLists.txt
AI/IMU/serial/examples/: serial_example.cc
AI/IMU/serial/src/impl/: unix.cc
AI/Odometria/: CMakeLists.txt  Odometria.cpp
AI/Odometry/: CMakeLists.txt  Kinematic.cpp  Odometry.cpp
AI/Odometry/src/: Calculo_Matriz_Rotação_IMU.py  Equac.Cinemat_Esq.py  F_Kinematic.py  Imu_Odometry.py  Kinematic_Equat.py  Odometry.py  Odometry_1.py  Test_Kinem_Equation.py  Test_Kinem_Equation_Antigo.py  Teste_Aquis_BKB.py
AI/Vision/: .travis.yml  CMakeLists.txt  CommitVision.sh  Cyano.ini  Magenta.ini  convertendo.sh  limpar.sh  pointsCalibration.py  test.py  vision.py  zerar.sh
AI/Vision/Data/: Ball.xml  NAO_morph  OUR_morph  Vector.npy  config.ini
AI/Vision/Data/old_backup/: config.ini
AI/Vision/Dynamixel/include/: dxl_hal.h
AI/Vision/Dynamixel/src/: dxl_hal.c
AI/Vision/Train/: README.md  avell.sh  check.py  extratc.py  gen_pb.sh  generate_label.py  generate_tfrecord.py  rename.py  train.sh  treinando_rede.sh  xml_to_csv.py  zipNetwork.sh
AI/Vision/Train/Videos/: README.md
AI/Vision/Train/data/: object-detection.pbtxt  train_labels.csv
AI/Vision/Training/: quebra.py  rename.sh
AI/Vision/Treinamento/: Individual.py  trainNN.py
AI/Vision/Treinamento/Bat/: Individual.py  main_nn.py
AI/Vision/Workbench/: convertendo_all.sh  limpar_all.sh  zerar.sh
AI/Vision/Workbench/GeoGebra/: Moldelo de Teste.ggb
AI/Vision/Workbench/iPython/: .ipynb  BasicClass.ipynb  BasicProcesses.ipynb  BasicThread.ipynb  Blackboard.ipynb  CameraCapture.ipynb  ColorSegmentation.ipynb  ConfigIni.ipynb  DNN.ipynb  Orchestrator.ipynb  Robot.ipynb  Robots.ipynb  Untitled.ipynb  VisionException.ipynb  avell.sh  check.ipynb  config.ini  converter.ipynb  extratc.ipynb  generate_label.ipynb  generate_tfrecord.ipynb  newClass.sh  rename.ipynb  test_main.ipynb  treinando_rede.sh  xml_to_csv.ipynb
AI/Vision/Workbench/iPython/Ainda não uso/: BasicThread.ipynb  Behavior.ipynb  Blackboard.ipynb  ColorSegmentation.ipynb  PanTilt.ipynb  pointsCalibration.ipynb
AI/Vision/Workbench/iPython/Classes/: Basic.ipynb  CLASSE_EXEMPLO.ipynb  KalmanFilter.ipynb  Landmark.ipynb  MainFunctions.ipynb  Robots.ipynb  visualMemory.ipynb
AI/Vision/Workbench/iPython/Testes/: Exemplo Segmentação de cores.ipynb  NN para distancia.ipynb  QRcode.ipynb  TestKalman.ipynb  Teste Matching.ipynb  experimento1.ipynb  finalized_model.sav  tests_basicThread.ipynb
AI/Vision/iPython/: BallDNN.ipynb  BasicClass.ipynb  BasicClass.py  BasicThread.ipynb  BasicThread.py  Blackboard.ipynb  Blackboard.py  CameraCapture.ipynb  CameraCapture.py  ColorSegmentation.ipynb  ConfigIni.ipynb  ConfigIni.py  HeadControl.ipynb  HeadControl.py  LocalizationVision.ipynb  LocalizationVision.py  MainFunctions.ipynb  Morphology.ipynb  PID.ipynb  PID.py  PanTilt.py  Servo.ipynb  Servo.py  SharedMemory.ipynb  SharedMemory.py  VisionException.ipynb  convertendo.sh  converter.ipynb  iPython.sh  limpar.sh  pointsCalibration.ipynb  servo.ipynb  vision.ipynb  vision.py
AI/Vision/iPython/Ainda não uso/: BallView.ipynb  CameraCapture.ipynb  HaarCascades.ipynb  Morphology.ipynb
AI/Vision/iPython/Testes/: CalibracaoCamera.ipynb  conf.py  example.ini
AI/Vision/include/: BallDNN.py  BasicClass.py  BasicProcesses.py  BasicThread.py  Blackboard.py  CameraCapture.py  ColorSegmentation.py  ConfigIni.py  DNN.py  HeadControl.py  LocalizationVision.py  Morphology.py  Robot.py  Robots.py  SegmentationColor.py  Servo.py  Untitled.py  VisionException.py  check.py  servo.py
AI/Vision/src/: BallVision.py  ClassConfig (copy).py  ClassConfig.py  DNN.py  Hello.py  Landmarks.py  Log.txt  Log1.txt  Log2.txt  MainFunctions.py  Orchestrator.py  PID.py  PanTilt.py  README.md  calibration.py  color_segmentation.py  comandos implementação mobilenet  control.py  defs.py  diretorio antigo rede  logC.txt  matlab.mat  pointsCalibration.py  servo.py  teste.py  vector.npy  vision.cpp  vision.py  vision_loc.py  vision_old.cpp  visionimutils.py  visiontest.py
AI/Vision/src/iPython/: BallVision.ipynb  BallVision.py  Teste bola.ipynb  Teste bola.py  VisionBall.ipynb  VisionBall.py  convertendo.sh  documentar.sh  iPython.sh  testKallman.ipynb  testKallman.py  teste.py
AI2/Communication/: CMakeLists.txt
AI2/Communication/include/: threading.h
AI2/Communication/src/: communication.cpp
AI2/Vision/Dynamixel/: CMakeLists.txt
AI2/Vision/Dynamixel/include/: dynamixel.h
AI3/IMU/: CMakeLists.txt
AI3/IMU/include/um7/: comms.h
AI3/IMU/serial/include/: serial.h
AI3/IMU/serial/src/: serial.cc
Config/: bashrc
Simulator/: GameState.py  ball.py  collisions.py  (+14 more)
(+236 files in other folders)
